--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
 
       // CREATE THE MISSING CODE HERE. Your code should add content to the random-number div.
       // ...
+      $('#random-button').on('click',function(){
+        var randNum = Math.floor(Math.random() * 100 ) + 1  
+        $('#random-number').html(randNum);        
+      })
 
 
       // ...
