--- a/index.html
+++ b/index.html
@@ -36,8 +36,11 @@
       // CREATE THE MISSING CODE HERE. Your code should add content to the random-number div.
       // ...
       $('#random-button').on('click',function(){
+
         var randNum = Math.floor(Math.random() * (999999999 - 100000000 + 1)) + 100000000; 
-        $('#random-number').html(randNum);        
+         var numDiv = $('<div>');
+         numDiv.html(randNum);
+        $('#random-number').prepend(numDiv)        
       })
 
 
