--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
         var randNum = Math.floor(Math.random() * (999999999 - 100000000 + 1)) + 100000000; 
          var numDiv = $('<div>');
          numDiv.html(randNum);
-        $('#random-number').prepend(numDiv)        
+        $('#random-number').prepend('<hr>');
+        $('#random-number').prepend(numDiv);      
       })
 
 
