--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       // ...
       $('#random-button').on('click',function(){
 
-        var randNum = Math.floor(Math.random() * (999999999 - 100000000 + 1)) + 100000000; 
+        var randNum = Math.floor(Math.random() * (999999999 - 100000000)) + 100000000
          var numDiv = $('<div>');
          numDiv.html(randNum);
         $('#random-number').prepend('<hr>');
